# sogen

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  q
.github/: dependabot.yml
.github/workflows/: build.yml  review.yml
cmake/: compiler-env.cmake  sccache.cmake  utils.cmake
cmake/misc/: node-pre-script.js
cmake/toolchain/: emscripten.cmake  ios.cmake  mingw-w64.cmake
mcp/: .gitignore  README.md  package-lock.json  package.json  server.js
page/: .prettierignore  emulator.js  index.html  package-lock.json  package.json  vite.config.ts
page/src/: App.css  App.tsx  (+17 more)
src/: .clang-format-ignore  CMakeLists.txt
src/analyzer/: CMakeLists.txt  analysis.cpp  analysis.hpp  disassembler.cpp  disassembler.hpp  main.cpp  minidump.cpp  minidump.hpp  object_watching.hpp  reflect_extension.hpp  reflect_type_info.hpp  resource.rc  snapshot.cpp  snapshot.hpp  std_include.hpp  tenet_tracer.cpp  tenet_tracer.hpp  test.py
src/backend-selection/: CMakeLists.txt  backend_selection.cpp  backend_selection.hpp
src/backends/: CMakeLists.txt
src/backends/icicle-emulator/: CMakeLists.txt  icicle_x64_emulator.cpp  icicle_x64_emulator.hpp  icicle_x86_64_emulator.cpp  icicle_x86_64_emulator.hpp
src/backends/icicle-emulator/icicle-bridge/: .gitignore  CMakeLists.txt  Cargo.toml
src/backends/icicle-emulator/icicle-bridge/data/Ghidra/Processors/x86/data/languages/: ia.sinc  macros.sinc  x86-32-golang.register.info
src/backends/icicle-emulator/icicle-bridge/src/: icicle.rs  lib.rs  registers.rs
src/backends/unicorn-emulator/: CMakeLists.txt  function_wrapper.hpp  function_wrapper2.hpp  function_wrapper_tcg.hpp  unicorn.hpp  unicorn_x64_emulator.cpp  unicorn_x86_64_emulator.cpp  unicorn_x86_64_emulator.hpp
src/common/: CMakeLists.txt  segment_utils.hpp
src/common/network/: address.cpp  address.hpp  socket.cpp  socket.hpp  tcp_client_socket.cpp  tcp_server_socket.hpp  udp_socket.cpp
src/common/platform/: compiler.hpp  file_management.hpp  kernel_mapped.hpp  memory.hpp  network.hpp  platform.hpp  port.hpp  primitives.hpp  process.hpp  registry.hpp  status.hpp  synchronisation.hpp  threading.hpp  unicode.hpp  user.hpp  win_pefile.hpp  window.hpp
src/common/utils/: buffer_accessor.hpp  compression.cpp  compression.hpp  container.hpp  file_handle.hpp  finally.hpp  function.hpp  interupt_handler.cpp  interupt_handler.hpp  io.cpp  io.hpp  nt_handle.hpp  object.hpp  path_key.hpp  string.cpp  string.hpp  time.cpp  time.hpp  timer.hpp  wildcard.hpp  win.hpp
src/debugger/: CMakeLists.txt  event_handler.cpp  event_handler.hpp  events.fbs  events.hpp  events_generated.hxx  main.cpp  message_transmitter.cpp  message_transmitter.hpp  std_include.hpp
src/emulator/: address_utils.hpp  arch_emulator.hpp  binary_writer.hpp  cpu_interface.hpp  emulator.hpp  hook_interface.hpp  memory_interface.hpp  memory_permission.hpp  memory_region.hpp  scoped_hook.hpp  serialization.hpp  typed_emulator.hpp  x64_emulator.hpp  x86_register.hpp
src/fuzzer/: CMakeLists.txt  main.cpp
src/fuzzing-engine/: fuzzer.cpp  fuzzer.hpp  input_generator.cpp
src/gdb-stub/: connection_handler.cpp  connection_handler.hpp  gdb_stub.cpp  gdb_stub.hpp
src/icicle/: CMakeLists.txt  Cargo.toml
src/icicle-emulator/: CMakeLists.txt  icicle_x64_emulator.cpp
src/icicle/data/Ghidra/Processors/x86/data/languages/: ia.sinc  x86-64-golang.register.info
src/icicle/src/: icicle.rs  lib.rs  registers.rs
src/samples/: CMakeLists.txt
src/samples/minimal-32bit-sample/: hello.asm
src/samples/test-sample/: CMakeLists.txt  resource.rc  test.cpp
src/tools/: create-root.bat
src/tools/dump-apiset/: CMakeLists.txt  dump-apiset.cpp
src/unicorn-emulator/: CMakeLists.txt  unicorn_x64_emulator.cpp
src/windows-emulator/: CMakeLists.txt  cpu_context.cpp  cpu_context.hpp  emulator_thread.cpp  emulator_thread.hpp  emulator_utils.hpp  event_manager.cpp  event_manager.hpp  exception_dispatch.cpp  exception_dispatch.hpp  file_system.hpp  generic_logger.hpp  handles.hpp  io_completion_wait.cpp  io_completion_wait.hpp  io_device.cpp  io_device.hpp  kusd_mmio.cpp  kusd_mmio.hpp  logger.cpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  memory_permission_ext.hpp  memory_utils.hpp  minidump_loader.cpp  minidump_loader.hpp  port.cpp  port.hpp  process_context.cpp  process_context.hpp  std_include.hpp  syscall_dispatcher.cpp  syscall_dispatcher.hpp  syscall_utils.hpp  syscalls.cpp  user_callback_dispatch.hpp  user_handle_table.hpp  win32k_shared_state.hpp  win32k_userconnect.cpp  (+6 more)
src/windows-emulator-test/: CMakeLists.txt  emulation_test.cpp  emulation_test_utils.hpp  file_system_test.cpp  serialization_test.cpp  static_socket_factory.hpp  time_test.cpp  unicode_test.cpp
src/windows-emulator/apiset/: apiset.cpp  apiset.hpp  default_apiset.hpp
src/windows-emulator/devices/: afd_endpoint.cpp  afd_endpoint.hpp  afd_types.hpp  mount_point_manager.cpp  mountmgr.hpp  named_pipe.hpp  security_support_provider.cpp  security_support_provider.hpp
src/windows-emulator/module/: mapped_module.hpp  module_manager.cpp  module_manager.hpp  module_mapping.cpp  module_mapping.hpp
src/windows-emulator/network/: i_socket.hpp  socket_factory.cpp  socket_factory.hpp  socket_wrapper.cpp  socket_wrapper.hpp  static_socket_factory.cpp  static_socket_factory.hpp
src/windows-emulator/ports/: api_port.cpp  api_port.hpp  dns_resolver.cpp  dns_resolver.hpp  lsa_policy_lookup.cpp  lsa_policy_lookup.hpp
src/windows-emulator/registry/: hive_parser.cpp  hive_parser.hpp  registry_manager.cpp  registry_manager.hpp
src/windows-emulator/syscalls/: event.cpp  exception.cpp  file.cpp  gdi.cpp  io_completion.cpp  license.cpp  locale.cpp  memory.cpp  mutant.cpp  object.cpp  port.cpp  process.cpp  registry.cpp  section.cpp  semaphore.cpp  system.cpp  thread.cpp  timer.cpp  token.cpp  trace.cpp  user.cpp  worker_factory.cpp
src/windows-emulator/version/: windows_version_manager.cpp  windows_version_manager.hpp
src/windows-gdb-stub/: win_x64_gdb_stub_handler.hpp  x64_gdb_stub_handler.hpp  x64_register_mapping.hpp
(+38 files in other folders)
